--- a/index.html
+++ b/index.html
@@ -10,15 +10,65 @@
     <link rel="stylesheet" href="./style.css">
     <title>Hello, world!</title>
   </head>
-  <body class="bg-dark">
-    <nav class="navbar navbar-light bg-light fixed-top">
-      <div class="container">
-        <a class="navbar-brand position-relative top-0" href="#">
-          <img src="./images/logo.jpg" alt="" width="50" height="50">
-        </a>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">entrelanas&agujas<img src="./images/icons8_yarn_64px_4.png" width="35" alt=""></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact" class="text-spacing">Contact</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
-    <p style="color: white">    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis consequuntur est quisquam voluptas laborum tenetur facere numquam, provident amet voluptates incidunt doloribus molestias voluptate perferendis ipsam voluptatum, quas sit modi reprehenderit! Consectetur architecto accusamus magnam facere in quia, at ratione perspiciatis aliquam quidem soluta, iste sunt deleniti natus consequuntur? Deleniti ab quas animi voluptatibus tempore, voluptatem laudantium! Libero ipsam perspiciatis et? Tempore quas, aspernatur praesentium molestias sunt obcaecati et laboriosam quos, corrupti necessitatibus asperiores illum nulla. Reiciendis consectetur, rem animi officia laboriosam aperiam magnam veniam dolores ipsam provident enim eligendi quia! Rem rerum ullam reiciendis, a similique excepturi odio doloribus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique impedit eius doloremque sed dolor in officia sunt soluta distinctio ullam velit corrupti, asperiores, nulla accusamus consectetur cumque consequuntur animi ab recusandae quae perspiciatis ea. Voluptates, molestiae. Cum nesciunt, impedit nihil rerum sunt eius, neque mollitia sequi at quas voluptate nostrum. Architecto necessitatibus perferendis asperiores ipsum a officiis nostrum inventore vel quibusdam. Excepturi adipisci labore, culpa at, quibusdam rem veritatis aperiam nostrum ad accusamus soluta. Repudiandae iure nam esse quibusdam exercitationem quae. Nihil ea aspernatur accusamus tempore nam vel culpa. Blanditiis in asperiores odio est exercitationem quae, eaque cupiditate soluta excepturi!</p>
+    <div class="hero-banner"></div>
+    <div class="hero-image"></div>
+    <p style="color: #525250"><i class="bi bi-heart" style="font-size: 2rem;"></i> <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia officia unde nulla iste ratione aliquid perferendis modi quaerat adipisci ipsa obcaecati, excepturi totam explicabo cupiditate animi sapiente, velit debitis quae.</p>
+
+    <p><i class="bi bi-house-door" style="font-size:2rem"></i> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid praesentium pariatur nemo incidunt, iure non exercitationem nobis nulla modi ab.</p>
+    <h2 class="text-center">Temporada Invierno</h2>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./images/poncho2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./images/barbijo-negro.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./images/barbijo-blanco.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+    <h2 class="text-center">Temporada Verano</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime similique exercitationem, facilis architecto praesentium eius odit sequi quis? Ea, autem?</p>
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./images/bikini grande.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./images/corpiñoturquesa.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="./images/corpiñovioleta.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet, accusantium? Eligendi saepe quos, dolore necessitatibus, hic maiores corrupti alias eos earum, fugit est praesentium adipisci molestiae laborum? Assumenda, a explicabo.</p>
+    <footer id="contact">
+      <a href="#">Inicio</a>
+      <a href="#">Instagram</a>
+      <a href="#">Wpp</a>
+    </footer>
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
   </body>
