--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     </nav>
     <div class="hero-banner"></div>
     <div class="hero-image"></div>
-    <p style="color: #525250"><i class="bi bi-heart" style="font-size: 2rem;"></i> <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia officia unde nulla iste ratione aliquid perferendis modi quaerat adipisci ipsa obcaecati, excepturi totam explicabo cupiditate animi sapiente, velit debitis quae.</p>
+    <p style="color: #525250"><i class="bi bi-heart" style="font-size: 2rem; color: rgb(184, 23, 23);"></i> <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia officia unde nulla iste ratione aliquid perferendis modi quaerat adipisci ipsa obcaecati, excepturi totam explicabo cupiditate animi sapiente, velit debitis quae.</p>
 
-    <p><i class="bi bi-house-door" style="font-size:2rem"></i> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid praesentium pariatur nemo incidunt, iure non exercitationem nobis nulla modi ab.</p>
+    <p><i class="bi bi-house-door" style="font-size:2rem; color: chocolate;"></i> <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid praesentium pariatur nemo incidunt, iure non exercitationem nobis nulla modi ab.</p>
     <h2 class="text-center">Temporada Invierno</h2>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
