--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link" href="#temporada" class="text-spacing">Temporadas</a>
+            <a class="nav-link" href="#temporada" class="text-spacing">Catálogo</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#contact" class="text-spacing">Contacto</a>
@@ -42,7 +42,13 @@
       mi refugio en el invierno. Ahora quiero compartir con vos esto que me genera tanta felicidad. <br><i
         class="bi bi-heart" style="font-size: 2rem;"></i></p>
 
-    <h2 id="temporada" class="text-center">Temporada Invierno</h2>
+    <br>
+    <br>
+
+    <h2 id="temporada" class="text-center">Invierno</h2>
+
+    <br>
+
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -56,7 +62,13 @@
         </div>
       </div>
     </div>
-    <h2 class="text-center">Temporada Verano</h2>
+
+    <br>
+
+    <h2 class="text-center">Verano</h2>
+
+    <br>
+
     <div id="carouselExampleSlidesOnly2" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -70,26 +82,34 @@
         </div>
       </div>
     </div>
-    <p>Materiales hipoalergenicos elegidos cuidadosamente, siempre de primeras marcas. Se entregan siempre higienizados por protocolo.</p>
+    <p>Materiales hipoalergenicos elegidos cuidadosamente, siempre de primeras marcas. Se entregan higienizados por protocolo.</p>
+
+    <br>
+    <br>
 
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <p class="coment"><img src="./images/avatars/random.jpg" width="30" style="border-radius: 100%;" alt="">"Me encantó, lo compré para regalo y me lo terminé quedando!"</p>
+          <p class="coment"><img src="./images/avatars/adris.jpg" width="30" style="border-radius: 100%;" alt="">Adriana <br> “Encantada con mi cuellito super abrigado y calentito para el frío.”</p>
         </div>
         <div class="carousel-item">
-      <p class="coment"><img src="./images/avatars/65559151_421884068403168_8187867604210974231_n.jpg" width="30" height="30" style="border-radius: 100%;" alt="">"Diseños hermosos, se nota que estan hechos con mucho amor, super recomiendo"<i
-          class="bi bi-emoji-heart-eyes"></i></p>
+      <p class="coment"><img src="./images/avatars/barb.jpg" width="30" height="30" style="border-radius: 100%;" alt="">Barbara <br> "Diseños hermosos, se nota que estan hechos con mucho amor, super recomiendo♥♥"</p>
         </div>
         <div class="carousel-item">
-          <p class="coment"><img src="./images/avatars/adris.jpg" width="30" style="border-radius: 100%;" alt="">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <p class="coment"><img src="./images/avatars/sol.jpg" width="30" style="border-radius: 100%;" alt=""> Sol <br> "Las bufandas y gorritos más cómodos y abrigados del AMBA. Solo apto para lxs que quieran pasar un mejor invierno."</p>
+        </div>
+        <div class="carousel-item">
+          <p class="coment"><img src="./images/avatars/joaquin.jpg" width="30" style="border-radius: 100%;" alt=""> Joaquín <br> "Super contento con mis nuevas medias de lana!!"</p>
         </div>
       </div>
     </div>
-    <p style="border-radius: 100px;"><i class="bi bi-house-door" style="font-size:1.5rem;"></i> Quedate en casa, yo te lo llevo a la
+    <p class="b-100"><i class="bi bi-house-door" style="font-size:1.5rem;"></i> Quedate en casa, te lo llevo a la
       puerta.</p>
-      <p style="border-radius: 100px;"><i class="bi bi-envelope" style="font-size:1.5rem;"></i> Envios a todo Buenos Aires!</p>
-    <p style="border-radius: 100px;"><i class="bi bi-instagram" style="font-size:1.5rem;"></i> Ponete en contacto a traves de mi Instagram!</p>
+      <p class="b-100"><i class="bi bi-envelope" style="font-size:1.5rem;"></i> Envios a todo Buenos Aires!</p>
+    <p class="b-100"><i class="bi bi-instagram" style="font-size:1.5rem;"></i> Ponete en contacto a traves de mi Instagram!</p>
+
+    <br>
+    <br>
 
   </main>
   <blockquote class="instagram-media"
