--- a/index.html
+++ b/index.html
@@ -44,11 +44,15 @@
 
     <br>
     <br>
-
-    <h2 id="temporada" class="text-center">Invierno</h2>
-
     <br>
-
+    <div class="pantu-container">
+      <div class="pantu"></div>
+      <div class="text">¡Aprovecha las pantumedias para este Invierno!</div>
+    </div>
+    <br>
+    <br>
+    <h2 id="temporada" class="text-center">Invierno</h2>
+    <br>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -62,13 +66,9 @@
         </div>
       </div>
     </div>
-
     <br>
-
     <h2 class="text-center">Verano</h2>
-
     <br>
-
     <div id="carouselExampleSlidesOnly2" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -82,11 +82,14 @@
         </div>
       </div>
     </div>
-    <p>Materiales hipoalergenicos elegidos cuidadosamente, siempre de primeras marcas. Se entregan higienizados por protocolo.</p>
-
     <br>
     <br>
-
+    <div class="separator"></div>
+    <br>
+    <p class="b-100"><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i> <br> Materiales hipoalergenicos elegidos cuidadosamente, siempre de primeras marcas. Se entregan higienizados por protocolo. <br> <i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></p>
+    <br>
+    <div class="separator"></div>
+    <br>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -107,10 +110,8 @@
       puerta.</p>
       <p class="b-100"><i class="bi bi-envelope" style="font-size:1.5rem;"></i> Envios a todo Buenos Aires!</p>
     <p class="b-100"><i class="bi bi-instagram" style="font-size:1.5rem;"></i> Ponete en contacto a traves de mi Instagram!</p>
-
     <br>
     <br>
-
   </main>
   <blockquote class="instagram-media"
     data-instgrm-permalink="https://www.instagram.com/p/CPQ53T_BjKX/?utm_source=ig_embed&amp;utm_campaign=loading"
