--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <p class="coment"><img src="./images/avatars/sol.jpg" width="30" style="border-radius: 100%;" alt=""> Sol <br> "Las bufandas y gorritos más cómodos y abrigados del AMBA. Solo apto para lxs que quieran pasar un mejor invierno."</p>
         </div>
         <div class="carousel-item">
-          <p class="coment"><img src="./images/avatars/joaquin.jpg" width="30" style="border-radius: 100%;" alt=""> Joaquín <br> "Super contento con mis nuevas medias de lana!!"</p>
+          <p class="coment"><img src="./images/avatars/joaquin.jpg" width="30" style="border-radius: 100%;" alt=""> Joaquín <br> "Super contento con mis nuevas pantumedias de lana!!"</p>
         </div>
       </div>
     </div>
