--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
         </div>
       </div>
     </div>
-    <p class="b-100"><i class="bi bi-house-door" style="font-size:1.5rem;"></i> Quedate en casa, te lo llevo a la
+    <p class="b-100"><i class="bi bi-house-door font"></i> Quedate en casa, te lo llevo a la
       puerta.</p>
-      <p class="b-100"><i class="bi bi-envelope" style="font-size:1.5rem;"></i> Envios a todo Buenos Aires!</p>
-    <p class="b-100"><i class="bi bi-instagram" style="font-size:1.5rem;"></i> Ponete en contacto a traves de mi Instagram!</p>
+      <p class="b-100"><i class="bi bi-envelope font"></i> Envios a todo Buenos Aires!</p>
+    <p id="contact" class="b-100"><i class="bi bi-instagram font"></i> Ponete en contacto a traves de mi Instagram!</p>
     <br>
     <br>
   </main>
@@ -197,14 +197,13 @@
     </div>
   </blockquote>
   <script async src="//www.instagram.com/embed.js"></script>
-  <footer id="contact">
-    <div style="width: 30%;">
-      <img src="./images/logo.jpg" width="78" style="position: relative; left: 0px;" alt="">
+  <footer>
+    <div class="footer__img-container">
+      <img src="./images/logo.jpg" width="78" alt="">
     </div>
-    <div style="display: flex; flex-direction: column; width: 85%;">
+    <div class="footer__a-container">
       <a href="#">Inicio</a>
       <a href="https://www.instagram.com/entremuchaslanasyagujas/">Instagram</a>
-      <a href="#">Wpp</a>
     </div>
   </footer>
   <!-- Option 1: Bootstrap Bundle with Popper -->
