--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <p class="coment"><img src="./images/avatars/adris.jpg" width="30" style="border-radius: 100%;" alt="">Adriana <br> “Encantada con mi cuellito super abrigado y calentito para el frío.”</p>
         </div>
         <div class="carousel-item">
-      <p class="coment"><img src="./images/avatars/barb.jpg" width="30" height="30" style="border-radius: 100%;" alt="">Barbara <br> "Diseños hermosos, se nota que estan hechos con mucho amor, super recomiendo♥♥"</p>
+      <p class="coment"><img src="./images/avatars/barb.jpg" width="30" height="30" style="border-radius: 100%;" alt="">Bárbara <br> "Diseños hermosos, se nota que estan hechos con mucho amor, super recomiendo♥♥"</p>
         </div>
         <div class="carousel-item">
           <p class="coment"><img src="./images/avatars/sol.jpg" width="30" style="border-radius: 100%;" alt=""> Sol <br> "Las bufandas y gorritos más cómodos y abrigados del AMBA. Solo apto para lxs que quieran pasar un mejor invierno."</p>
