--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="./style.css">
-  <title>Maqueta Romina</title>
+  <title>Entrelanas&agujas</title>
+  <link rel="icon" href="./images/icons8_yarn_64px_4.png">
 </head>
 
 <body>
@@ -37,7 +38,7 @@
   <div class="hero-image"></div>
 
   <main>
-    <p class="about"> Me llamo Romina. Desde que recuerdo disfruto el frío y usar lana. Mi abuela me enseñó esta
+    <p class="about sections-text"> Me llamo Romina. Desde que recuerdo disfruto el frío y usar lana. Mi abuela me enseñó esta
       tradición, esta forma de conectarme con mi interior, y hace un tiempo empecé a tejer lo que me abriga, lo que es
       mi refugio en el invierno. Ahora quiero compartir con vos esto que me genera tanta felicidad. <br><i
         class="bi bi-heart" style="font-size: 2rem;"></i></p>
@@ -86,7 +87,7 @@
     <br>
     <div class="separator"></div>
     <br>
-    <p class="b-100"><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i> <br> Materiales hipoalergenicos elegidos cuidadosamente, siempre de primeras marcas. Se entregan higienizados por protocolo. <br> <i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></p>
+    <section class="b-100 sections-text"><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i> <br> Materiales hipoalergenicos elegidos cuidadosamente, siempre de primeras marcas. Se entregan higienizados por protocolo. <br> <i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></section>
     <br>
     <div class="separator"></div>
     <br>
@@ -106,10 +107,12 @@
         </div>
       </div>
     </div>
-    <p class="b-100"><i class="bi bi-house-door font"></i> Quedate en casa, te lo llevo a la
-      puerta.</p>
-      <p class="b-100"><i class="bi bi-envelope font"></i> Envios a todo Buenos Aires!</p>
-    <p id="contact" class="b-100"><i class="bi bi-instagram font"></i> Ponete en contacto a traves de mi Instagram!</p>
+    <div class="section-container">
+      <p class="b-100 sections-text"><i class="bi bi-house-door font"></i> Quedate en casa, te lo llevo a la
+        puerta.</p>
+        <p class="b-100 sections-text"><i class="bi bi-envelope font"></i> Envios a todo Buenos Aires!</p>
+      <a href="https://www.instagram.com/entremuchaslanasyagujas/" id="contact" class="b-100 sections-text contact"><i class="bi bi-instagram font"></i> Ponete en contacto a traves de mi Instagram!</a>
+    </div>
     <br>
     <br>
   </main>
