--- a/index.html
+++ b/index.html
@@ -85,11 +85,19 @@
     </div>
     <br>
     <br>
-    <div class="separator"></div>
+    <div class="separator-container">
+      <div class="separator"></div>
+      <img src="./images/logo.jpg" width="40" alt="">
+      <div class="separator"></div>
+    </div>
     <br>
     <section class="b-100 sections-text"><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i> <br> Materiales hipoalergenicos elegidos cuidadosamente, siempre de primeras marcas. Se entregan higienizados por protocolo. <br> <i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></section>
     <br>
-    <div class="separator"></div>
+    <div class="separator-container">
+          <div class="separator"></div>
+          <img src="./images/logo.jpg" width="40" alt="">
+          <div class="separator"></div>
+    </div>
     <br>
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
@@ -108,9 +116,9 @@
       </div>
     </div>
     <div class="section-container">
-      <p class="b-100 sections-text"><i class="bi bi-house-door font"></i> Quedate en casa, te lo llevo a la
-        puerta.</p>
-        <p class="b-100 sections-text"><i class="bi bi-envelope font"></i> Envios a todo Buenos Aires!</p>
+      <a href="https://www.instagram.com/entremuchaslanasyagujas/" class="b-100 sections-text"><i class="bi bi-house-door font"></i> Quedate en casa, te lo llevo a la
+        puerta.</a>
+        <a href="https://www.instagram.com/entremuchaslanasyagujas/" class="b-100 sections-text"><i class="bi bi-envelope font"></i> Envios a todo Buenos Aires!</a>
       <a href="https://www.instagram.com/entremuchaslanasyagujas/" id="contact" class="b-100 sections-text contact"><i class="bi bi-instagram font"></i> Ponete en contacto a traves de mi Instagram!</a>
     </div>
     <br>
