--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">entrelanas&agujas<img src="./images/icons8_yarn_64px_4.png" width="35"
+      <a class="navbar-brand" href="#">entrelanas&agujas<img src="./images/icons8_yarn_64px_4b.svg" width="35"
           alt=""></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
